--- a/i18n/fr/docusaurus-theme-classic/footer.json
+++ b/i18n/fr/docusaurus-theme-classic/footer.json
@@ -1,18 +1,18 @@
 {
   "link.title.Community": {
-    "message": "Communauté",
+    "message": "Community",
     "description": "The title of the footer links column with title=Community in the footer"
   },
   "copyright": {
-    "message": "Créé avec Docusaurus pour YunoHost",
+    "message": "Build with Docusaurus for YunoHost",
     "description": "The footer copyright"
   },
   "link.title.Contribute": {
-    "message": "Contribuer",
+    "message": "Contribute",
     "description": "The title of the footer links column with title=Contribute in the footer"
   },
   "link.item.label.Website": {
-    "message": "Site web",
+    "message": "Website",
     "description": "The label of footer link with label=Website linking to https://yunohost.org/"
   },
   "link.item.label.Forum": {
@@ -20,7 +20,7 @@
     "description": "The label of footer link with label=Forum linking to https://forum.yunohost.org/"
   },
   "link.item.label.Donate": {
-    "message": "Donner",
+    "message": "Donate",
     "description": "The label of footer link with label=Donate linking to https://donate.yunohost.org/"
   },
   "link.item.label.GitHub (core)": {
@@ -32,7 +32,7 @@
     "description": "The label of footer link with label=GitHub (apps) linking to https://github.com/YunoHost-Apps"
   },
   "link.item.label.Translate": {
-    "message": "Traduire",
+    "message": "Translate",
     "description": "The label of footer link with label=Translate linking to https://translate.yunohost.org/"
   }
 }
