--- a/docs/packaging/60.advanced/20.config_panels.mdx
+++ b/docs/packaging/60.advanced/20.config_panels.mdx
@@ -158,11 +158,11 @@ ynh_app_config_run $1
 
 A question's getter is the function used to read the current value/state. Custom getters are defined using bash functions called `getter__QUESTION_SHORT_KEY()` which returns data through stdout.
 
-Stdout can be generated using one of those formats:
+Stdout can be generated into one of those formats:
 
   1. either just the raw value,
-  2. or a yaml, containing the value and other metadata and properties (for example the `style` of an `alert`, the list of available `choices` of a `select`, etc.)
-Note that in the first case, if the raw value contains any yaml-senstive character (e.g. `#` which is interpreted as a comment in yaml), make sure it is returned between escaped quotes (cf. dedicated example below) as it will be [converted to yaml](https://github.com/YunoHost/issues/issues/2501) by YunoHost core in the end.
+  2. or a YAML message, containing the value and other metadata and properties (for example the `style` of an `alert`, the list of available `choices` of a `select`, etc.)
+Note that in the first case, if the raw value contains any yaml-sensitive character (e.g. `#` which is interpreted as a comment in yaml), make sure it is returned between escaped quotes (cf. dedicated example below) as it will be [converted to yaml](https://github.com/YunoHost/issues/issues/2501) by YunoHost core in the end.
 
 <details>
 <summary><i>Basic example with raw stdout: get the timezone on the system</i></summary>
@@ -202,6 +202,7 @@ default = "#cccccc"
 ```bash
 get__background() {
     current_color=$(grep 'id="backgroundColorPicker' "$install_dir/index.html" | grep -oP 'value="\K[^"]*') # e.g. #2B748B
+    # explicitely add escaped quotes to protect YAML-sensitive comment char ('#')
     echo "\"$current_color\""
 }
 ```
