Rename email pages

--- a/i18n/de/docusaurus-plugin-content-docs/current/admin/35.email/index.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/admin/35.email/index.mdx
@@ -22,7 +22,7 @@ Um Ihre Einstellungen zu validieren:
 
 ## E-Mail-Programme
 
-Um mit dem E-Mail-Server zu interagieren (E-Mails lesen und senden), können Sie entweder einen Webclient wie Roundcube oder Rainloop auf Ihrem Server installieren - oder einen Desktop-/Mobil-Client, wie auf [dieser Seite](/user/email_clients) beschrieben, konfigurieren.
+Um mit dem E-Mail-Server zu interagieren (E-Mails lesen und senden), können Sie entweder einen Webclient wie Roundcube oder Rainloop auf Ihrem Server installieren - oder einen Desktop-/Mobil-Client, wie auf [dieser Seite](/admin/email/clients) beschrieben, konfigurieren.
 
 Desktop- und Mobil-Clients haben den Vorteil, dass sie Ihre E-Mails auf das Gerät kopieren, was eine Offline-Anzeige und einen relativen Schutz gegen mögliche Hardware-Ausfälle Ihres Servers ermöglicht.
 
@@ -43,7 +43,7 @@ Is it possible that the IP address from your server have been previously been us
 To ensure that your servers’ IP address isn't on these blacklists and to remove it from them, follow this [link](/admin/troubleshooting/blacklist_forms).
 ## Eine Migration von E-Mails von einem E-Mail-Provider zu einer YunoHost-Instanz
 
-Siehe [diese Seite](/user/email_migration).
+Siehe [diese Seite](/admin/email/migration).
 
 ## Configuring SMTP relay
 
