--- a/i18n/it/docusaurus-plugin-content-docs/current/admin/35.email/index.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/admin/35.email/index.mdx
@@ -22,7 +22,7 @@ Per assicurarsi una configurazione corretta:
 
 ## Programmi (client) per la posta elettronica
 
-Per interagire con il vostro server mail, ricevere e inviare le mail, potete installare un client web come Roundcube o Rainloop sul vostro server, oppure configurare un client su pc o smartphone, come descritto [in questa pagina](/user/email_clients).
+Per interagire con il vostro server mail, ricevere e inviare le mail, potete installare un client web come Roundcube o Rainloop sul vostro server, oppure configurare un client su pc o smartphone, come descritto [in questa pagina](/admin/email/clients).
 
 I client sul pc e smartphone godono del vantaggio di scaricare i messaggi sul device, permettendo la consultazione dei messaggi anche off line e una parziale protezione dalla perdita dei messaggi in caso di guasti al vostro server.
 
@@ -46,7 +46,7 @@ Per accertarsi che il vostro indirizzo IP non sia presente nell'elenco degli ind
 
 ## Migrazione delle vostre mail da un fornitore terzo al vostro server YunoHost
 
-Consultate [questa pagina](/user/email_migration).
+Consultate [questa pagina](/admin/email/migration).
 
 ## Configurazione di un relay SMTP
 
