--- a/i18n/es/docusaurus-plugin-content-docs/current/admin/35.email/index.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/admin/35.email/index.mdx
@@ -24,7 +24,7 @@ Una nota de al menos 8~9/10 es un objetivo razonable.
 
 ## Clientes de mensajería
 
-Para interactuar con el servidor de mail, o sea leer y mandar emails, puedes instalar un cliente web como Roundcube o Rainloop en tu servidor - o configurar un cliente de Desktop o móvil como descrito en [esta página](/user/email_clients).
+Para interactuar con el servidor de mail, o sea leer y mandar emails, puedes instalar un cliente web como Roundcube o Rainloop en tu servidor - o configurar un cliente de Desktop o móvil como descrito en [esta página](/admin/email/clients).
 
 Los clientes Desktop o móvil tienen la ventaja de copiar tu emails en el equipo, así permitiendo la consulta desconectada de tus mensajes, y cierta protección frente a la posibilidad de un servidor averiado.
 
@@ -46,7 +46,7 @@ To ensure that your servers’ IP address isn't on these blacklists and to remov
 
 ## Migrating email from an email provider to a YunoHost instance
 
-See [this page](/user/email_migration).
+See [this page](/admin/email/migration).
 
 ## Configuring SMTP relay
 
