--- a/i18n/ar/code.json
+++ b/i18n/ar/code.json
@@ -317,26 +317,22 @@
     "message": "Install YunoHost !",
     "description": "The label for the link to Install documentation"
   },
-  "homepage.link.item.label.User Documentation": {
-    "message": "User Documentation",
-    "description": "The label for the link to user documentation"
-  },
   "homepage.link.item.label.Admin Documentation": {
     "message": "Admin Documentation",
     "description": "The label for the link to admin documentation"
-  },
-  "homepage.link.item.label.Developer Documentation": {
-    "message": "Developer Documentation",
-    "description": "The label for the link to developer documentation"
-  },
-  "homepage.link.item.label.Packaging Documentation": {
-    "message": "Packaging Documentation",
-    "description": "The label for the link to Packaging documentation"
   },
   "YunoHost logo": {
     "message": "YunoHost logo"
   },
   "Learn how to self-host!": {
     "message": "Learn how to self-host!"
+  },
+  "homepage.link.item.label.Development and packaging Documentation": {
+    "message": "Development & packaging",
+    "description": "The label for the link to development and packaging documentation"
+  },
+  "homepage.link.item.label.Community": {
+    "message": "Community",
+    "description": "The label for the link to Community"
   }
 }
