--- a/i18n/en/code.json
+++ b/i18n/en/code.json
@@ -338,5 +338,13 @@
   },
   "Learn how to self-host!": {
     "message": "Learn how to self-host!"
+  },
+  "homepage.link.item.label.Development and packaging Documentation": {
+    "message": "Development & packaging",
+    "description": "The label for the link to development and packaging documentation"
+  },
+  "homepage.link.item.label.Community": {
+    "message": "Community",
+    "description": "The label for the link to Community"
   }
 }
