--- a/i18n/oc/docusaurus-theme-classic/navbar.json
+++ b/i18n/oc/docusaurus-theme-classic/navbar.json
@@ -30,5 +30,9 @@
   "item.label.Packaging": {
     "message": "Packaging",
     "description": "Navbar item with label Packaging"
+  },
+  "item.label.Development and packaging": {
+    "message": "Development and packaging",
+    "description": "Navbar item with label Development and packaging"
   }
 }
