Typo in markdown example

--- a/docs/dev/15.core/forms.mdx
+++ b/docs/dev/15.core/forms.mdx
@@ -229,7 +229,7 @@ Markdown is currently only rendered in the web-admin
 
 ```toml
 [section.my_option_id]
-type = "display_text"
+type = "markdown"
 ask = "Text **rendered** in markdown."
 ```
 
