Add multiline example for mardown question

--- a/docs/dev/15.core/forms.mdx
+++ b/docs/dev/15.core/forms.mdx
@@ -227,10 +227,10 @@ Markdown is currently only rendered in the web-admin
 
 #### Example
 
-```toml
+ ``toml
 [section.my_option_id]
 type = "markdown"
-ask = "Text **rendered** in markdown."
+ask = "Text **rendered** in markdown.\nAnd this text is on a new line."
 ```
 
 #### Properties
