--- a/docs/admin/02.what_is_yunohost/20.demo.mdx
+++ b/docs/admin/02.what_is_yunohost/20.demo.mdx
@@ -9,6 +9,8 @@ import {YunoHostDocsCard, YunoHostDocsCardHeading} from '@site/src/components/Yu
 
 # Try YunoHost on a demo server
 
+This is a simple change to see if it works
+
 :::caution
 This demo server could be down from time to time, but at least you can test and that's really cool :)
 :::
